<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GetStarted"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Welcomelogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_projectlogowithname"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:id="@+id/welcomeImage"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_welcome"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:id="@+id/WelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/PakistanDigitalPlatform"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:text="@string/PakistanFirstDigitalPlatform"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/PapersWastes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PapersWastesPlastic"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/lightGray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/GetStartedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:backgroundTint="@color/lightGreen"
            android:text="@string/GetStarted"
            android:textColor="#fff" />
    </LinearLayout>



</LinearLayout>