<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SupportFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <ImageButton
        android:id="@+id/support_return"
        android:layout_width="50dp"
        android:layout_height="0dp"

        android:background="@android:color/transparent"
        android:contentDescription="Description"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintBottom_toBottomOf="@id/navGuideline"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/navGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintBottom_toBottomOf="@id/navGuideline"
        android:textSize="22sp"
        android:padding="5dp"
        android:text="Back"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/scrapUncleSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ScrapUncle Support"
        app:layout_constraintTop_toBottomOf="@id/navGuideline"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        android:padding="16dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        />

    <ImageView
        android:id="@+id/supportImage"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_customersupport"
        app:layout_constraintTop_toBottomOf="@id/scrapUncleSupport"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"

        />

    <TextView
        android:id="@+id/supportText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/support_str"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:justificationMode="inter_word"
        android:textSize="20sp"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/supportImage"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"
        />

    <TextView
        android:id="@+id/callus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callus"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/supportText"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_no"
        android:textSize="20sp"
        android:textColor="@color/lightGreen"
        app:layout_constraintTop_toBottomOf="@id/supportText"
        app:layout_constraintLeft_toRightOf="@id/callus"
        app:layout_constraintRight_toRightOf="@id/rightGuideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>